# mega-uploader-auth

./: Cargo.toml  Dockerfile  Jenkinsfile  README.md
k8s/: aws-secret.yaml  configmap.yaml  deployment.yaml  ingress.yaml  namespace.yaml  service.yaml
src/: config.rs  db.rs  main.rs  routes.rs
src/handlers/: auth.rs  hello.rs  info.rs
src/handlers/auth/: cli_callback.rs  cli_renew.rs  cli_start.rs  cli_status.rs  mod.rs  utils.rs
src/schemas/: auth.rs
src/utils/: banner.rs
