[package]
name = "mega-uploader-auth"
version = "0.1.0"
edition = "2024"
description = "An authentication service for Mega Uploader"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
bb8 = "0.9"
bb8-redis = "0.26"
redis = "1"
clap = { version = "4.5", features = ["derive", "env"] }