[package]
name = "mega-uploader-auth"
version = "0.1.0"
edition = "2024"
description = "An authentication service for Mega Uploader"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
bb8 = "0.9"
bb8-redis = "0.26"
redis = "1"
clap = { version = "4.5", features = ["derive", "env"] }
serde_json = "1.0.149"
urlencoding = "2.1.3"
uuid = { version = "1.19.0", features = ["v4"] }
reqwest = { version = "0.13.1", features = ["form", "json"] }
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
aws-config = { version = "1.5", features = ["behavior-version-latest"] }
aws-sdk-sts = "1.96.0"